--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "profi",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://horaciosa.github.io/education-time/",
+  "homepage": "https://horaciosa.github.io/educ-first/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
