--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "homepage": "https://horaciosa.github.io/educ-first/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
@@ -16,8 +15,9 @@
     "css-loader": "^5.0.2",
     "dotenv-webpack": "^6.0.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
     "html-loader": "^2.0.0",
-    "html-webpack-plugin": "^5.1.0",
+    "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -34,8 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start:dev": "webpack serve",
-    "build": "react-scripts build",
-    "build:web": "webpack",
+    "build": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
